just test build_push_image_karsajobs_ui.sh

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -1,4 +1,4 @@
-name: CI for karsajobs-ui  # Define a descriptive name for this GitHub Actions workflow
+name: CI for karsajobs-ui  # lalala
 
 on:
   push:
